# Testing-development

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Guia_Implementacion_Examen.md  Makefile  PROYECTO_RESUMEN.md  README.md  build_release.bat  cmake_install.cmake  crear_distribucion.bat  diff.txt  ejecutar.bat  main.cpp
Assets/campaign/: 1_primer_impacto.tim  4_messi_gol_gol_gol.tim  6_ball_in_hoop.tim  8_tocar_hamster.tim  README.md
cambios/: README.md  corte_cuerda_tijera.md  motor_fisica.md  motor_fisica_backup.h
cambios/cuerda/: anclajes.md  corte_cuerda_tijera_codigo.h
cambios/objetos/: balancin.md  gancho.md  globo.md  pistola.md  tijera.md
docs/: README.md  build.sh  build_web.bat  build_web.ps1  index.html  index.js  index.wasm
saves/: BallInHoop.tim  LowerAllBuckets.tim  TripleShoot.tim  canon.tim  juan-Diego.tim  messi.tim  messi1.tim  nivelJD.tim  partida.tim
src/core/: animacion.h  entidad_fisica.h  math_utils.h  registro_eventos.h  tipo_entidad.h  vector2d.h
src/fisica/: colisiones.h  fisica_ventilador.h  motor_fisica.h
src/objetos/: balancin.h  banda.h  barril_chavo.h  bola.h  bola_beisbol.h  bola_rebotadora.h  caja_hamster.h  caja_sorpresa.h  caminadora.h  canon.h  catalogo_menu.gen.h  cinta_transportadora.h  correa.h  cubeta.h  cuerda.h  dinamita.h  dinamita_detonador.h  escalon.h  explosion.h  foco.h  gancho.h  gato.h  generador_motor.h  globo.h  ladrillo.h  ladrillo_horizontal.h  ladrillo_vertical.h  linterna.h  lupa.h  obstaculo_estatico.h  pared_rectangular.h  pistola.h  plano_inclinado.h  polea.h  raton.h  rueda_hamster.h  seguidor_booster.h  soporte_torque.h  tijera.h  trampolin.h  (+2 more)
src/sistema/: assets_extern.h  eventos.h  eventos_ui.h  guardado_partida.h  rutas_datos.h
tools/: convertir_icono.py  crear_distribucion.ps1  generar_catalogo_menu.py  installer.iss
web/: README.md  build_web.ps1  index.html  index.js  index.wasm
